[gd_scene load_steps=12 format=3 uid="uid://cii0ibnwsouyp"]

[ext_resource type="Script" path="res://player_2.gd" id="1_nhs4b"]
[ext_resource type="Texture2D" uid="uid://dnx8ik2eryuq7" path="res://flashlight.png" id="2_lrxh7"]
[ext_resource type="Texture2D" uid="uid://bx7lecality6l" path="res://LightMask.png" id="3_ljf85"]
[ext_resource type="Texture2D" uid="uid://dofqhturi147x" path="res://player_red.png" id="4_qykh5"]
[ext_resource type="Texture2D" uid="uid://dc5am5w1t43b" path="res://player_blue.png" id="5_6a4li"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6v8p"]
radius = 32.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pf71b"]
polygon = PackedVector2Array(1.69991, 64.8248, 664.289, 1190.43, 1141, 727, 17.9423, -60.3224, -1329, 408, -679.954, 1176.74, -9.29455, 64.4755)

[sub_resource type="CircleShape2D" id="CircleShape2D_5e6fo"]
radius = 32.0

[sub_resource type="Animation" id="Animation_hf4mg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body_1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.050966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body_1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 44)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body_2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -38)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body_2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="Animation" id="Animation_b87nu"]
resource_name = "walk"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body_1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0, 1.4, 2.7, 4.3, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.050966, -0.050966, -0.0402197, 0.0571132, -0.114106, -0.050966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body_1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4, 2.7, 4.3, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 44), Vector2(9, 53), Vector2(-5, 46), Vector2(2, 32), Vector2(0, 44)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body_2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.8, 3.6, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -38), Vector2(9, -44), Vector2(4, -32), Vector2(-3, -32), Vector2(0, -38)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body_2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.8, 3.6, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [3.14159, 3.22653, 3.04166, 3.18689, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5ruc"]
_data = {
"RESET": SubResource("Animation_hf4mg"),
"walk": SubResource("Animation_b87nu")
}

[node name="Player_2" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 33
motion_mode = 1
script = ExtResource("1_nhs4b")

[node name="Collision_1" type="CollisionShape2D" parent="."]
position = Vector2(0, 44)
shape = SubResource("CircleShape2D_x6v8p")

[node name="Body_1" type="Node2D" parent="."]
position = Vector2(0, 44)
rotation = -0.050966

[node name="Flashlight" type="Sprite2D" parent="Body_1"]
light_mask = 8
visibility_layer = 8
position = Vector2(-2.58737, 37.9645)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_lrxh7")
flip_v = true

[node name="Heat" type="PointLight2D" parent="Body_1/Flashlight"]
light_mask = 3
visibility_layer = 3
position = Vector2(0.574021, 58.3603)
color = Color(0.631373, 0.172549, 0.0705882, 1)
energy = 16.0
range_item_cull_mask = 8
texture = ExtResource("3_ljf85")
texture_scale = 0.3

[node name="PointLight2D" type="PointLight2D" parent="Body_1"]
position = Vector2(-1.22537, 65.8386)
enabled = false
color = Color(0.764706, 0.72549, 0.701961, 1)
energy = 5.3
shadow_enabled = true
texture = ExtResource("3_ljf85")

[node name="LightArea" type="Area2D" parent="Body_1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body_1/LightArea"]
polygon = PackedVector2Array(-197.779, 383.064, -151.718, 403.64, -105.574, 416.935, -56.1004, 427.247, 0.826263, 434.482, 70.6382, 431.973, 122.115, 423.075, 163.063, 409.8, 197.869, 393.021, 1.50116, 57.9608, -3.84936, 57.351)

[node name="Sprite2D" type="Sprite2D" parent="Body_1"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_qykh5")
flip_v = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Body_1"]
position = Vector2(2, -8)
occluder = SubResource("OccluderPolygon2D_pf71b")

[node name="Collision_2" type="CollisionShape2D" parent="."]
position = Vector2(0, -38)
rotation = 1.98272
shape = SubResource("CircleShape2D_5e6fo")

[node name="Body_2" type="Node2D" parent="."]
position = Vector2(0, -38)
rotation = 3.14159

[node name="Flashlight" type="Sprite2D" parent="Body_2"]
light_mask = 8
visibility_layer = 8
position = Vector2(-2.06635, 38.2195)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_lrxh7")
flip_v = true

[node name="Heat" type="PointLight2D" parent="Body_2/Flashlight"]
light_mask = 3
visibility_layer = 3
position = Vector2(0.574021, 58.3603)
color = Color(0.631373, 0.172549, 0.0705882, 1)
energy = 16.0
range_item_cull_mask = 8
texture = ExtResource("3_ljf85")
texture_scale = 0.3

[node name="PointLight2D" type="PointLight2D" parent="Body_2"]
position = Vector2(-1.51987, 64.6625)
enabled = false
color = Color(0.764706, 0.72549, 0.701961, 1)
energy = 5.3
shadow_enabled = true
texture = ExtResource("3_ljf85")

[node name="LightArea" type="Area2D" parent="Body_2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body_2/LightArea"]
polygon = PackedVector2Array(-197.779, 383.064, -151.718, 403.64, -105.574, 416.935, -56.1004, 427.247, 0.826263, 434.482, 70.6382, 431.973, 122.115, 423.075, 163.063, 409.8, 197.869, 393.021, 1.50116, 57.9608, -3.84936, 57.351)

[node name="Sprite2D" type="Sprite2D" parent="Body_2"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_6a4li")
flip_v = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="Body_2"]
position = Vector2(2, -7)
occluder = SubResource("OccluderPolygon2D_pf71b")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.66, 0.66)

[node name="Flashlight" type="Node2D" parent="."]

[node name="StunTimer" type="Timer" parent="Flashlight"]
wait_time = 0.1
one_shot = true

[node name="TurnOffTimer" type="Timer" parent="Flashlight"]
one_shot = true

[node name="HeatingTickTimer" type="Timer" parent="Flashlight"]
one_shot = true

[node name="CoolingTickTimer" type="Timer" parent="Flashlight"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k5ruc")
}
autoplay = "walk"

[connection signal="timeout" from="Flashlight/StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="Flashlight/TurnOffTimer" to="." method="_on_turn_off_timer_timeout"]
[connection signal="timeout" from="Flashlight/HeatingTickTimer" to="." method="_on_heating_tick_timer_timeout"]
[connection signal="timeout" from="Flashlight/CoolingTickTimer" to="." method="_on_cooling_tick_timer_timeout"]
